Breaking changes for Noise interface in Java, Fix C++ pre-thresholding
Java DP Lib:
* Amend the `Noise` interface to accept `double` types as `delta`

This commit adds an overloaded method addNoise() that accepts double delta value and deprecates the one that accepts @Nullable Double.
In the next commits we will delete the deprecated methods.

This will break the clients who have their own implementation of the Noise interface. They will need to implement the newly added overloadded versions of the addNoise() method.
Clients should start calling the new versions of the addNoise() method that accept primitive double delta, because we will delete the deprecated versions. Clients who pass "null" delta value should pass "0" instead.

C++ DP Lib:
* Do not recalculate Stddev for GaussianMechanism
* Add payload to approx bounds output in case of not enough data
* Fix error message for invalid pre-thresholding
* Fix pre-thresholding implementation
* Add `pre_threshold` parameter to existing partition selection classes

RDP Accounting:
* Use exact formula for the Renyi DP guarantee of Laplace noise addition, instead of an upper bound.

Change-Id: I6ef6c15986d5824aa9e08cb795accb4085788eee
GitOrigin-RevId: aa095f64e961a7d7c5189956c437d609455de08d